Name/Description Change

--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # --- General options --- #
 
 # Name of website
-title: My website
+title: Andres Castaño's Website
 
 # Short description of your site
-description: A virtual proof that I'm awesome
+description: Think outside...no box required
 
 # --- Local development options ---
 # If your website is hosted locally rather than on GitHub, then you need to uncomment the next two parameters to set the url and baseurl
